<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gifBack">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/font"
        android:textColor="@color/decoderTheme"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="10dp"
        app:textAllCaps="true"
        android:padding="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/decode_menu_title"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/gif"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/tv_1"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decodeFile1"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:padding="25dp"
        android:text="@string/decode_file_1"
        android:layout_marginTop="50dp"
        android:textColor="@color/decoderTheme"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/decodeFile2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gif" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decodeFile2"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:padding="25dp"
        android:text="@string/decode_file_2"
        android:textSize="15sp"
        android:textColor="@color/decoderTheme"
        app:layout_constraintBottom_toTopOf="@+id/decodeFile3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decodeFile1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decodeFile3"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:padding="25dp"
        android:textColor="@color/decoderTheme"
        android:text="@string/decode_file_3"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@+id/decodeFile2" />

</androidx.constraintlayout.widget.ConstraintLayout>