<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:ignore="HardcodedText">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/gif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:src="@drawable/tv_2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currentBitTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/font"
        android:paddingTop="4dp"
        android:text="@string/current_signal_bit"
        android:textColor="@color/decoderTheme"
        android:textSize="@dimen/statsTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gif"
        app:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currentBitValTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="_"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/currentBitTv"
        app:layout_constraintTop_toTopOf="@+id/currentBitTv"
        tools:text="0" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currentByteTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font"
        android:paddingTop="4dp"
        android:text="@string/current_signal_byte"
        android:textColor="@color/decoderTheme"
        android:textSize="@dimen/statsTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentBitTv"
        app:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currentByteValTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="_"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/currentByteTv"
        app:layout_constraintTop_toTopOf="@+id/currentByteTv" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currentUpDownTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font"
        android:paddingTop="4dp"
        android:text="@string/current_signal_direction"
        android:textColor="@color/decoderTheme"
        android:textSize="@dimen/statsTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentByteTv"
        app:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currentUpDownValTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="_"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/currentUpDownTv"
        app:layout_constraintTop_toTopOf="@+id/currentUpDownTv" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currentProgressTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font"
        android:paddingTop="4dp"
        android:text="@string/progress"
        android:textColor="@color/decoderTheme"
        android:textSize="@dimen/statsTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentUpDownTv"
        app:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currentProgressValTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="0%"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/currentProgressTv"
        app:layout_constraintTop_toTopOf="@+id/currentProgressTv" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currentCharTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font"
        android:paddingTop="4dp"
        android:text="@string/current_signal_char"
        android:textColor="@color/decoderTheme"
        android:textSize="@dimen/statsTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentProgressTv"
        app:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currentCharValTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:text="_"
        android:maxLines="1"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentCharTv"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:text="@string/decode"
        android:textColor="@android:color/holo_orange_light"
        android:padding="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>